--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script async src="https://cse.google.com/cse.js?cx=83bc54f91d4d34ec3"></script>
 </head>
 <body>
-    <noscript>миша всё хуйня давай по новой</noscript>
+    <noscript>JS is unavailable in your browser. Please update to have a full experience!</noscript>
     <div class="header">
         <ul>
             <li><a href="https://vk.com/feed">
