update .DS_Store, index.html, main.js and styles.css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <noscript>JS is unavailable in your browser. Please update to have a full experience!</noscript>
     <div class="header">
+        
         <ul>
             <li><a href="https://vk.com/feed">
                 <img src="./logos/vk-logo.png" alt="vk-logo" class="vk-logo">
@@ -30,6 +31,11 @@
         </ul>
     </div>
     <div class="wrapper">
+        <div class="id-system">
+            <label for="id-input">ID: </label>
+            <input type="text" id="id-input">
+            <button id="submit-button">Submit</button>
+        </div>
         <div class="searchline">
             <div class="gcse-search"></div>
         </div>
