--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Homepage</title>
     <link rel="stylesheet" href="styles.css">
     <script async src="https://cse.google.com/cse.js?cx=83bc54f91d4d34ec3"></script>
+    <script src="./scripts/includer.js"></script>
 </head>
 <body>
     <noscript>JS is unavailable in your browser. Please update to have a full experience!</noscript>
@@ -39,98 +40,13 @@
         <div class="searchline">
             <div class="gcse-search"></div>
         </div>
-        <div class="main-links">
-            <div class="link-tiles">
-                <a href="https://www.youtube.com">
-                    <div class="link-tile">
-                        <h1>YouTube</h1>
-                        <img src="./logos/youtube-logo.png" alt="" class="tube-logo">
-                    </div>
-                </a>
-                <a href="https://www.phind.com">
-                    <div class="link-tile">
-                        <h1>Phind</h1>
-                        <img src="./logos/phind-logo.png" alt="" class="phind-logo">
-                    </div>
-                </a>
-                <a href="https://chat.openai.com">
-                    <div class="link-tile">
-                        <h1>ChatGPT</h1>
-                        <img src="./logos/gpt-logo.png" alt="" class="gpt-logo">
-                    </div>
-                </a>
-                <a href="https://github.com">
-                    <div class="link-tile">
-                        <h1>GitHub</h1>
-                        <img src="./logos/git-logo.png" alt="" class="git-logo">
-                    </div>
-                </a>
-                <a href="https://stackoverflow.com">
-                    <div class="link-tile">
-                        <h1>StackOverflow</h1>
-                        <img src="./logos/stack-logo.png" alt="" class="stack-logo">
-                    </div>
-                </a>
-                <a href="https://remotedesktop.google.com/access/">
-                    <div class="link-tile">
-                        <h1>Chrome Remote</h1>
-                        <img src="./logos/chrem-logo.png" alt="" class="chrem-logo">
-                    </div>
-                </a>
-                <a href="https://www.reddit.com">
-                    <div class="link-tile">
-                        <h1>Reddit</h1>
-                        <img src="./logos/reddit-logo.png" alt="" class="reddit-logo">
-                    </div>
-                </a>
-            </div>
-        </div>
-        <div class="codeblocks">
-            <div class="codeblock">
-                <h1>HTML</h1>
-                <p>
-                    &#60;h1&#62;Hello, World!&#60;h1&#62;
-                </p>
-            </div>
-            <div class="codeblock">
-                <h1>Python</h1>
-                <p>
-                    print("Hello, World!")
-                </p>
-            </div>
-            <div class="codeblock">
-                <h1>C++</h1>
-                <p>
-                    #include &#60;iostream&#62; <br><br>
-                    int main() { <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;std::cout &#60&#60 "Hello, world!" &#60&#60 endl; <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;return 0; <br>
-                    }
-                </p>
-            </div>
-            <div class="codeblock">
-                <h1>Javascript</h1> 
-                <p>
-                    console.log("Hello, World!")
-                </p>
-            </div>
-            <div class="codeblock">
-                <h1>Swift</h1>
-                <p>
-                    print("Hello, World!")
-                </p>
-            </div>
-            <div class="codeblock">
-                <h1>C</h1>
-                <p>
-                    #include &#60;stdio.h&#62; <br><br>
-                    int main() { <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;printf("Hello, world!"); <br>
-                        &nbsp;&nbsp;&nbsp;&nbsp;return 0; <br>
-                    }
-                </p>
-            </div>
-        </div>
+        <div class="preload" load-dep="./elements/preload.html"></div>
+        <div class="block-1" load-dep="./elements/id-1.html" hidden></div>
+        <div class="block-2" load-dep="./elements/id-2.html" hidden></div>
+        <div class="block-3" load-dep="./elements/id-3.html" hidden></div>
+        <script>
+        includeHTML();
+        </script>
     </div>
 <script src="./scripts/main.js"></script>
 </body>
