--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="https://mail.yandex.com/">
                 <img src="./logos/ym-logo.png" alt="ym-logo" class="ym-logo">
             </a></li>
-            <li><a href="https://dzen.ru/?yredirect=true">
+            <li><a href="https://ya.ru">
                 <img src="./logos/ya-logo.png" alt="ya-logo" class="ya-logo">
             </a></li>
         </ul>
