--- a/elements/id-1.html
+++ b/elements/id-1.html
@@ -12,6 +12,12 @@
                 <img src="./logos/phind-logo.png" alt="" class="phind-logo">
             </div>
         </a>
+        <a href="https://www.perplexity.ai">
+            <div class="link-tile">
+                <h1>Perplexity</h1>
+                <img src="./logos/perplexity-logo.png" alt="" class="perplexity-logo">
+            </div>
+        </a>
         <a href="https://chat.openai.com">
             <div class="link-tile">
                 <h1>ChatGPT</h1>
